--- a/build.gradle
+++ b/build.gradle
@@ -34,17 +34,24 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	// security
 //	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-devtools'
 	// thymeleaf
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	// thymeleaf-layout-dialect
+	implementation group: 'nz.net.ultraq.thymeleaf', name: 'thymeleaf-layout-dialect', version: '3.0.0'
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
 	// validation
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	// spring boot web
+	// 내장 톰캣
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	// queryParam 보는 용도
 	implementation group: 'com.github.gavlyukovskiy', name: 'p6spy-spring-boot-starter', version: '1.9.0'
 	// json
 	implementation group: 'org.json', name: 'json', version: '20220924'
+	// 쿼리 파라미터 로그
+	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6'
+	// excel 다운로드
+	implementation group: 'org.apache.poi', name: 'poi', version: '5.0.0'
 	// lombok
 	compileOnly 'org.projectlombok:lombok'
 //	runtimeOnly 'com.mysql:mysql-connector-j'
