--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,11 +10,11 @@ server.port=8080
 ############################################
 # DB
 ############################################
-# postresql
-#driver-class-name: org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://localhost:5432/rental
-#spring.datasource.username=uxplus
-#spring.datasource.password=1234
+# mysql
+spring.datasource.driver-class-name: com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/account_book
+spring.datasource.username=account_user
+spring.datasource.password=1234
 
 # ??? ? ?? ??, default = 10
 spring.datasource.hikari.maximum-pool-size=10
@@ -24,14 +24,12 @@ spring.datasource.hikari.connection-timeout=10000
 ############################################
 # JPA
 ############################################
-#spring.jpa.hibernate.ddl-auto=none
-# ??? ? ?? ??
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.generate-ddl=false
 #spring.jpa.show-sql=true
 spring.jpa.database=mysql
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-# ?? ?? ??
+# ???? ??
 spring.jpa.properties.hibernate.format_sql=true
 
 ############################################
@@ -48,7 +46,6 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML5
 spring.thymeleaf.cache=true
 
-
 ############################################
 # Common
 ############################################
@@ -57,8 +54,8 @@ spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
 
 # log4j2
-#logging.config=classpath:log4j2.xml
-#logging.level.org.springframework.boot.autoconfigure=debug
+logging.config=classpath:log4j2.xml
+logging.level.org.springframework.boot.autoconfigure=info
 
 # application-oauth.properties
 spring.profiles.include=oauth
