--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,9 @@
 ############################################
 # Server
 ############################################
-
-#
 spring.devtools.livereload.enabled=true
 env.server=local
-server.port=8080
+server.port=8081
 
 ############################################
 # DB
@@ -16,7 +14,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/account_book
 spring.datasource.username=account_user
 spring.datasource.password=1234
 
-# ??? ? ?? ??, default = 10
+# default = 10
 spring.datasource.hikari.maximum-pool-size=10
 # default : 30000ms(30s))
 spring.datasource.hikari.connection-timeout=10000
@@ -29,22 +27,17 @@ spring.jpa.generate-ddl=false
 #spring.jpa.show-sql=true
 spring.jpa.database=mysql
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-# ???? ??
 spring.jpa.properties.hibernate.format_sql=true
+
+############################################
+# Social-login
+############################################
+
 
 ############################################
 # Logging
 ############################################
 logging.level.org.hibernate.SQL=debug
-
-############################################
-# thymeleaf
-############################################
-spring.thymeleaf.prefix=classpath:templates/
-spring.thymeleaf.check-template-location=true
-spring.thymeleaf.suffix=.html
-spring.thymeleaf.mode=HTML5
-spring.thymeleaf.cache=true
 
 ############################################
 # Common
