소셜 회원가입 및 로그인 처리 완료
- openFeign 설정 완료
- 카카오 로그인 처리 완료
- 회원가입 처리 완료

--- a/src/main/resources/application-oauth.properties
+++ b/src/main/resources/application-oauth.properties
@@ -1,7 +1,9 @@
 #kakao
-oauth.kakao.authUrl=https://kauth.kakao.com/oauth/authorize
-oauth.kakao.tokenUrl=https://kauth.kakao.com/oauth/token
+oauth.kakao.hostUrl=https://kauth.kakao.com
+oauth.kakao.requestUser.hostUrl=https://kapi.kakao.com
+oauth.kakao.requestUser.url=/v2/user/me
+oauth.kakao.tokenUrl=/oauth/token
+oauth.kakao.callbackUrl=/v1/auth/kakao
 oauth.kakao.clientId=16dc5d22956229c5bba702cb65e7399b
 oauth.kakao.clientSecret=fLOeipgJpl5YrJSqjS3qzrJBliGboAj0
-oauth.kakao.callbackUrl=/v1/auth/kakao
 oauth.kakao.redirect.uri=http://localhost:8080/auth/kakao/join
